# oxvg

./: .gitignore  Cargo.toml  LICENSE  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tsconfig.json  typos.toml
crates/oxvg/: Cargo.toml
crates/oxvg/src/: args.rs  commands.rs  config.rs  fs.rs  lib.rs  main.rs  optimise.rs  spec  walk.rs
crates/oxvg/src/commands/: action.rs  format.rs  lint.rs  optimise.rs
crates/oxvg_actions/: Cargo.toml
crates/oxvg_actions/src/: actions.rs  error.rs  info.rs  lib.rs  state.rs  utils.rs
crates/oxvg_actions/src/actions/: manipulate.rs  state.rs  transform.rs
crates/oxvg_actions/src/base/: action_list.rs  mod.rs
crates/oxvg_actions/src/snapshots/: oxvg_actions__actions__select-2.snap  oxvg_actions__actions__select-3.snap  oxvg_actions__actions__select-4.snap  oxvg_actions__actions__select.snap  oxvg_actions__actions__select_empty-2.snap  oxvg_actions__actions__select_empty-3.snap  oxvg_actions__actions__select_empty.snap
crates/oxvg_actions/src/tutorial/: about.rs  mod.rs
crates/oxvg_ast/: Cargo.toml
crates/oxvg_ast/src/: arena.rs  atom.rs  attribute.rs  class_list.rs  document.rs  element.rs  error.rs  implementations.rs  lib.rs  name.rs  node.rs  parse.rs  selectors.rs  serialize.rs  style.rs  visitor.rs  xmlwriter.rs
crates/oxvg_ast/src/attribute/: content_type.rs  data.rs  group.rs
crates/oxvg_ast/src/element/: category.rs  data.rs
crates/oxvg_ast/src/implementations/: markup5ever.rs  roxmltree.rs  shared.rs
crates/oxvg_ast/src/parse/: markup5ever.rs  roxmltree.rs  web_sys.rs
crates/oxvg_collections/: Cargo.toml
crates/oxvg_collections/src/: allowed_content.rs  atom.rs  attribute.rs  collections.rs  content_type.rs  element.rs  lib.rs  name.rs  regex.rs
crates/oxvg_collections/src/attribute/: animation.rs  animation_timing.rs  aria.rs  core.rs  core_attrs.rs  filter_effect.rs  group.rs  inheritable.rs  list_of.rs  path.rs  presentation.rs  transfer_function.rs  transform.rs  uncategorised.rs  xlink.rs
crates/oxvg_collections/src/element/: category.rs
crates/oxvg_diagnostics/: Cargo.toml
crates/oxvg_diagnostics/src/: lib.rs
crates/oxvg_lint/: Cargo.toml
crates/oxvg_lint/src/: error.rs  lib.rs  parse.rs  utils.rs
crates/oxvg_lint/src/rules/: attributes.rs  mod.rs  no_default_attributes.rs  no_deprecated.rs  no_invalid_attributes.rs  no_unknown_attributes.rs  no_unknown_elements.rs  no_unused_ids.rs  no_unused_xmlns.rs  no_xlink.rs
crates/oxvg_lint/src/snapshots/: oxvg_lint__error__print_help.snap  oxvg_lint__error__print_many_error_many_line.snap  oxvg_lint__error__print_many_error_single_line.snap  oxvg_lint__error__print_path.snap  oxvg_lint__error__print_single_error_many_line.snap  oxvg_lint__error__print_single_error_single_line.snap  oxvg_lint__error__print_warning.snap
crates/oxvg_optimiser/: Cargo.toml
crates/oxvg_optimiser/benches/: benchmark_svgo.js  default_jobs.rs  download_svgs.nu  download_svgs.sh  package-lock.json  package.json  parse.rs  path.rs
crates/oxvg_optimiser/src/: configuration.rs  error.rs  lib.rs
crates/oxvg_optimiser/src/jobs/: add_attributes_to_s_v_g_element.rs  add_attributes_to_svg_element.rs  add_classes_to_s_v_g_element.rs  add_classes_to_svg.rs  apply_transforms.rs  cleanup_attributes.rs  cleanup_attrs.rs  cleanup_enable_background.rs  cleanup_ids.rs  cleanup_list_of_values.rs  cleanup_numeric_values.rs  collapse_groups.rs  convert_colors.rs  convert_ellipse_to_circle.rs  convert_one_stop_gradients.rs  convert_path_data.rs  convert_shape_to_path.rs  convert_style_to_attrs.rs  convert_transform.rs  inline_styles.rs  merge_paths.rs  merge_styles.rs  minify_styles.rs  mod.rs  move_elems_attrs_to_group.rs  move_group_attrs_to_elems.rs  precheck.rs  prefix_ids.rs  remove_attributes_by_selector.rs  remove_attrs.rs  remove_comments.rs  remove_deprecated_attrs.rs  remove_desc.rs  remove_dimensions.rs  remove_doctype.rs  remove_editors_n_s_data.rs  remove_editors_ns_data.rs  remove_elements_by_attr.rs  remove_empty_attrs.rs  remove_empty_containers.rs  (+21 more)
crates/oxvg_optimiser/src/utils/: cleanup_values.rs  find_references.rs  has_scripts.rs  minify_style.rs  mod.rs  path.rs  regex_memo.rs  style_info.rs  transform.rs
crates/oxvg_parse/: Cargo.toml
crates/oxvg_parse/src/: error.rs  lib.rs  types.rs
crates/oxvg_parse/src/types/: lightningcss.rs  number.rs
crates/oxvg_parser/: Cargo.toml
crates/oxvg_parser/src/: args.rs  diagnostics.rs  document.rs  file_reader.rs  fs.rs  lib.rs  main.rs
crates/oxvg_parser/src/state/: attributes.rs  begin.rs  declarations.rs  entities.rs  mod.rs  node_start.rs  processing_instructions.rs  tags.rs  text.rs
crates/oxvg_parser/src/syntactic_constructs/: character.rs  characters.rs  mod.rs  name.rs  names.rs  reference.rs  references.rs  whitespace.rs
crates/oxvg_path/: Cargo.toml
crates/oxvg_path/src/: algorithm.rs  command.rs  format.rs  geometry.rs  gjk_intersection.rs  lib.rs  math.rs  optimize.rs  parser.rs  paths.rs  points.rs  position.rs  positioned.rs
crates/oxvg_path/src/algorithm/: area.rs  bool_ops.rs  coords_iter.rs  lines_iter.rs
crates/oxvg_path/src/convert/: cleanup.rs  filter.rs  mixed.rs  mod.rs  relative.rs
crates/oxvg_path/src/geometry/: arc.rs  circle.rs  curve.rs  ellipses.rs  line.rs  point.rs  polygon.rs  rectangle.rs
crates/oxvg_path/src/paths/: events.rs  positioned.rs  segment.rs  svg.rs
crates/oxvg_path/src/snapshots/: oxvg_path__parser__path_parse-2.snap  oxvg_path__parser__path_parse-3.snap  oxvg_path__parser__path_parse-4.snap  oxvg_path__parser__path_parse-5.snap  oxvg_path__parser__path_parse-6.snap  oxvg_path__parser__path_parse-7.snap  oxvg_path__parser__path_parse.snap  oxvg_path__path_parse-2.snap  oxvg_path__path_parse-3.snap  oxvg_path__path_parse-4.snap  (+4 more)
crates/oxvg_selectors/: Cargo.toml
crates/oxvg_selectors/src/: allowed_content.rs  collections.rs  lib.rs
crates/oxvg_serialize/: Cargo.toml
crates/oxvg_serialize/src/: error.rs  lib.rs
crates/oxvg_style/: Cargo.toml
crates/oxvg_style/src/: lib.rs
derive/: Cargo.toml
derive/src/: lib.rs
(+504 files in other folders)
