[workspace]
resolver = "2"
members = ["crates/*", "packages/wasm", "packages/napi"]

[workspace.lints.rust]
missing_docs = { level = "warn" }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Too noisy and not really an issue
must_use_candidate = "allow"
return_self_not_must_use = "allow"
# Not a priority for svgo parity
float_cmp = "allow"
dbg_macro = "warn"

[workspace.package]
authors = ["Noah <noahwbaldwin@gmail.com>"]
license = "MIT"
repository = "https://github.com/noahbald/oxvg"

[workspace.dependencies]
oxvg = { path = "crates/oxvg" }
oxvg_ast = { path = "crates/oxvg_ast", version = "0.0.1-alpha.1" }
oxvg_collections = { path = "crates/oxvg_collections", version = "0.0.1" }
oxvg_derive = { path = "derive" }
oxvg_diagnostics = { path = "crates/oxvg_diagnostics", version = "0.0.1-alpha.1" }
oxvg_optimiser = { path = "crates/oxvg_optimiser" }
oxvg_path = { path = "crates/oxvg_path", version = "0.0.1-beta.4" }

anyhow = "1.0"
bitflags = { version = "2.7.0" }
cfg-if = { version = "1.0" }
# NOTE: Out of date version used for compatibility with selectors
# https://github.com/servo/stylo/blob/main/Cargo.toml#L35
cssparser = "0.34.0"
derive_more = "2.0"
derive-where = "1.2"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.14"
lazy_static = "1.5"
lightningcss = { version = "1.0.0-alpha.63", default-features = false, features = [
  "grid",
  "visitor",
  "nodejs",
] }
log = "0.4"
markup5ever = "0.14"
phf = { version = "0.11", features = ["macros"] }
precomputed-hash = "0.1"
rcdom = { package = "markup5ever_rcdom", version = "=0.5.0-unofficial" }
regex = "1.11"
roxmltree = "0.20"
selectors = "0.26"
serde = "1.0"
serde_json = "1.0"
serde_with = "3.12"
string_cache = "0.8"
tendril = "0.4"
typed-arena = "2.0"
quick-xml = "0.31"
xml5ever = "0.20"

# Developer dependencies
ctor = "0.2"
criterion = { version = "0.5", features = ["html_reports"] }
env_logger = "0.11"
insta = "1.42"
pretty_assertions = "1.4"

[profile.dev.package."*"]
opt-level = 3

[profile.test.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"

[profile.profiling]
inherits = "release"
debug = true
