[package]
name = "oxvg"
version = "0.0.3"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo", "optimisation"]
description = "Vector image toolchain."

[lints]
workspace = true

[[bin]]
name = "oxvg"
path = "src/main.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxvg_optimiser = { workspace = true, features = ["clap"] }
oxvg_ast = { workspace = true, features = [
  "roxmltree",
  "selectors",
  "serialize",
  "clap",
] }

anyhow = { workspace = true }
clap = { workspace = true }
etcetera = "0.10"
ignore = "0.4"
log = { workspace = true }
roxmltree = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
typed-arena = { workspace = true }
