[package]
name = "oxvg_actions"
version = "0.0.5"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo", "optimisation"]
description = "The OXVG actions library is used for transforming SVG documents."

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
rand = "0.9"

[dev-dependencies]
insta = { workspace = true }
