[package]
name = "oxvg_actions"
version = "0.0.3"
edition = "2021"
authors.workspace = true
readme = "../../readme.md"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
rand = "0.9"

[dev-dependencies]
insta = { workspace = true }
