[package]
name = "oxvg_actions"
version = "0.0.5"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo", "optimisation"]
description = "The OXVG actions library is used for transforming SVG documents."

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
napi = ["dep:napi", "dep:napi-derive", "oxvg_collections/napi"]
serde = ["dep:serde", "dep:serde_json", "oxvg_collections/serde"]
wasm = [
  "serde",
  "dep:wasm-bindgen",
  "dep:serde-wasm-bindgen",
  "dep:tsify",
  "oxvg_collections/wasm",
]

[dependencies]
oxvg_ast = { workspace = true, features = ["selectors"] }
oxvg_collections = { workspace = true, features = ["serde"] }
oxvg_parse = { workspace = true }
oxvg_serialize = { workspace = true }

lightningcss = { workspace = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde-wasm-bindgen = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }

[dev-dependencies]
oxvg_ast = { workspace = true, features = ["roxmltree"] }

insta = { workspace = true }
