[package]
name = "oxvg_collections"
version = "0.0.5"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg"]
description = "Collections of data and utilities about SVG"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parse", "serialize"]
markup5ever = ["dep:string_cache", "dep:tendril", "dep:xml5ever"]
napi = ["dep:napi", "dep:napi-derive"]
parse = ["dep:oxvg_parse", "dep:cssparser_lightningcss"]
serde = ["dep:serde", "bitflags/serde"]
serialize = ["dep:oxvg_serialize"]
wasm = ["dep:tsify", "dep:wasm-bindgen"]

[dependencies]
oxvg_parse = { workspace = true, features = ["lightningcss"], optional = true }
oxvg_path = { workspace = true }
oxvg_serialize = { workspace = true, optional = true }

bitflags = { workspace = true }
cssparser_lightningcss = { workspace = true, optional = true }
dashmap = { workspace = true }
itertools = { workspace = true }
lightningcss = { workspace = true }
log = { workspace = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
smallvec = { workspace = true }
string_cache = { workspace = true, optional = true }
tendril = { workspace = true, optional = true }
tsify = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
xml5ever = { workspace = true, optional = true }
