[package]
name = "oxvg_diagnostics"
version = "0.0.1-alpha.1"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Error reporting for the oxvg library"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.0.0", features = ["fancy"] }
thiserror = "1.0.56"
quick-xml = { workspace = true }
