[package]
name = "oxvg_lint"
version = "0.0.3"
edition = "2021"
authors.workspace = true
readme = "../../readme.md"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markup5ever = { workspace = true }
rcdom = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
xml5ever = { workspace = true }
