[package]
name = "oxvg_lint"
version = "0.0.3"
edition = "2021"
authors.workspace = true
readme = "../../readme.md"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parse"]
clap = ["dep:clap"]
lsp = ["dep:lsp-types"]
parse = ["oxvg_ast/parse", "oxvg_ast/roxmltree"]
serde = ["dep:serde"]

[dependencies]
oxvg_ast = { workspace = true, features = ["range"] }
oxvg_collections = { workspace = true }

bytecount = { workspace = true }
clap = { workspace = true, optional = true }
lsp-types = { workspace = true, optional = true }
rayon = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
insta = { workspace = true }
