[package]
name = "oxvg_optimiser"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxvg_ast = { workspace = true, features = [
  "selectors",
  "visitor",
  "style",
  "parse",
  "serialize",
] }
oxvg_path = { workspace = true, features = ["oxvg", "serde"] }
oxvg_collections = { workspace = true }

anyhow = { workspace = true }
derive-where = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
lazy_static = { workspace = true }
lightningcss = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
ctor = { workspace = true }
divan = { workspace = true }
env_logger = { workspace = true }
insta = { workspace = true }

[profile.bench]
opt-level = 3
debug-assertions = false
