[package]
name = "oxvg_optimiser"
version = "0.0.2"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords = ["svg", "svgo", "optimisation"]
description = "The OXVG optimiser is library for optimising SVG documents."

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
napi = ["dep:napi", "dep:napi-derive", "oxvg_path/napi"]

[dependencies]
oxvg_ast = { workspace = true, features = [
  "selectors",
  "visitor",
  "style",
  "serialize",
] }
oxvg_path = { workspace = true, features = ["oxvg", "serde"] }
oxvg_collections = { workspace = true }

anyhow = { workspace = true }
derive_more = { workspace = true }
derive-where = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
lazy_static = { workspace = true }
lightningcss = { workspace = true }
log = { workspace = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
parcel_selectors = { version = "0.28" }
phf = { workspace = true }
regex = { workspace = true }
typed-arena = { workspace = true }
urlencoding = "2.1"

[dev-dependencies]
ctor = { workspace = true }
criterion = { workspace = true }
env_logger = { workspace = true }
insta = { workspace = true }

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "default_jobs"
harness = false

[[bench]]
name = "path"
harness = false
