[package]
name = "oxvg_parse"
version = "0.0.3"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo"]
description = "Parsing primitives for SVG"

[lints]
workspace = true

[dependencies]
cssparser_lightningcss = { workspace = true }
lightningcss = { workspace = true }
