[package]
name = "oxvg_parse"
version = "0.0.5"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo"]
description = "Parsing primitives for SVG"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
lightningcss = ["dep:cssparser_lightningcss", "dep:lightningcss"]

[dependencies]
cssparser_lightningcss = { workspace = true, optional = true }
lightningcss = { workspace = true, optional = true }
