[package]
name = "oxvg_parser"
version = "0.1.0"
edition = "2021"
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "oxvg_parser"
path = "src/main.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.0.0", features = ["fancy"] }
thiserror = "1.0.56"
