[package]
name = "oxvg_path"
version = "0.0.2"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../../readme.md"
keywords = ["svg", "svgo", "path"]
description = "SVG path parsing, serialization, and minification"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["parse", "format", "optimise"]
format = ["ryu"]
jsonschema = ["schemars", "serde"]
napi = ["dep:napi", "dep:napi-derive"]
optimise = ["format", "bitflags"]
oxvg = ["dep:lightningcss", "dep:oxvg_ast"]
parse = ["bitflags"]
serde = ["dep:serde"]

[dependencies]
oxvg_ast = { workspace = true, optional = true }
bitflags = { workspace = true, optional = true }
lightningcss = { workspace = true, optional = true }
log = { workspace = true }
napi = { workspace = true, optional = true }
napi-derive = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
schemars = { version = "0.8.19", optional = true }
ryu = { version = "1.0.18", optional = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }
