[package]
name = "oxvg_style"
version = "0.0.1-alpha.1"
edition = "2021"
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SVG specific lightningcss wrappers"

[lints]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxvg_selectors = { workspace = true }

lightningcss = { workspace = true }
markup5ever = { workspace = true }
rcdom = { workspace = true }
